--- a/Atividades/MemoryGame/index.html
+++ b/Atividades/MemoryGame/index.html
@@ -260,7 +260,7 @@ function getParamsFromURL() {
     }
 
     const wordsPath = `../../${level}/${unit}/data1/words.txt`;
-    const imagePathTemplate = `../../${level}/${unit}/data1/imagem`;
+    const imagePathTemplate = `../../${level}/${unit}/data1/imagens/imagem`;
 
     fetch(wordsPath)
         .then(response => {
