--- a/Atividades/MemoryGame/index.html
+++ b/Atividades/MemoryGame/index.html
@@ -496,9 +496,51 @@ function getParamsFromURL() {
 
 function speakText(text) {
     const synth = window.speechSynthesis;
-    const utterance = new SpeechSynthesisUtterance(text);
-    utterance.lang = 'en-US'; // Configura o idioma como inglês americano
-    synth.speak(utterance);
+
+    // Cancela qualquer síntese anterior
+    synth.cancel();
+
+    // Variável para controlar o alerta
+    let alertDisplayed = false;
+
+    // Função para verificar vozes e realizar a leitura
+    const readText = () => {
+        const voices = synth.getVoices();
+        let voice = voices.find(v => v.lang === 'en-US');
+
+        // Caso não encontre a voz "en-US"
+        if (!voice) {
+            if (!alertDisplayed) {
+                if (voices.length === 0) {
+                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
+                } else {
+                    alert("No 'en-US' voice found. Using default voice instead.");
+                }
+                alertDisplayed = true;
+            }
+        }
+
+        // Configura o texto para leitura
+        const utterance = new SpeechSynthesisUtterance(text);
+        utterance.lang = 'en-US'; // Força o idioma inglês americano
+        if (voice) {
+            utterance.voice = voice;
+        }
+
+        // Realiza a leitura
+        synth.speak(utterance);
+    };
+
+    // Verifica se as vozes já estão carregadas
+    if (synth.getVoices().length === 0) {
+        // Adiciona evento para aguardar o carregamento das vozes
+        synth.onvoiceschanged = () => {
+            readText();
+        };
+    } else {
+        // Caso as vozes já estejam disponíveis
+        readText();
+    }
 }
 
         loadCardsData(initGame);
