--- a/Atividades/MemoryGame/index.html
+++ b/Atividades/MemoryGame/index.html
@@ -441,28 +441,33 @@ function getParamsFromURL() {
             });
         }
 
-        function updateNextPhase(userId) {
-            const currentPhase = getPhaseFromURL();
-            const { level, unit } = getLevelAndUnitFromURL();
-            const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-            
-            try {
-                if (currentPhase === "last") {
-                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    // Criar a nova unidade no nível atual
-                    firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
-                } else if (currentPhase === "end") {
-                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    // Criar um novo nível e adicionar Unit1
-                    firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
-                } else {
-                    const nextPhase = parseInt(currentPhase) + 1;
-                    dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
-                }
-            } catch (error) {
-                console.error("Erro ao atualizar o progresso da fase:", error);
-            }
+       function updateNextPhase(userId) {
+    const currentPhase = getPhaseFromURL();
+    const { level, unit } = getParamsFromURL();
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+
+    console.log("Updating next phase...");
+    console.log(`Current Level: ${level}, Unit: ${unit}, Phase: ${currentPhase}`);
+
+    try {
+        if (currentPhase === "last") {
+            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+            console.log(`Unlocking next unit: ${nextUnit}`);
+            firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
+        } else if (currentPhase === "end") {
+            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+            console.log(`Unlocking next level: ${nextLevel}`);
+            firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+        } else {
+            const nextPhase = parseInt(currentPhase) + 1;
+            console.log(`Unlocking next phase: fase${nextPhase}`);
+            dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
         }
+        console.log("Update successful.");
+    } catch (error) {
+        console.error("Error updating next phase:", error);
+    }
+}
 
         function getPhaseFromURL() {
             const params = new URLSearchParams(window.location.search);
