--- a/Atividades/Speak/index.html
+++ b/Atividades/Speak/index.html
@@ -223,33 +223,55 @@
 
         firebase.initializeApp(firebaseConfig);
 
-        const wordListUrl = '../data1/words.txt';
-        const imageFolderUrl = '../data1/imagens/';
+  // Obtém parâmetros da URL
+    function getParamsFromURL() {
+        const params = new URLSearchParams(window.location.search);
+        return {
+            level: params.get('level'),
+            unit: params.get('unit'),
+            fase: params.get('fase'),
+        };
+    }
+
+    const { level, unit } = getParamsFromURL();
+
+    if (!level || !unit) {
+        console.error("Parâmetros 'level' e 'unit' são obrigatórios na URL.");
+        alert("Por favor, forneça os parâmetros 'level' e 'unit' na URL.");
+    } else {
+        const wordListUrl = `../../${level}/${unit}/data1/words.txt`;
+        const imageFolderUrl = `../../${level}/${unit}/data1/imagens/`;
         let words = [];
         let currentWordIndex = 0;
-        let wordsTried = 0; 
-        let recognitionTimeout;
-        let tryAgainInProgress = false;        
         let attemptsPerWord = {}; // Registro de tentativas por palavra
 
-// Inicializa as palavras após carregá-las do arquivo
-fetch(wordListUrl)
-    .then(response => response.text())
-    .then(data => {
-        words = data.split('\n').map(word => word.trim()).filter(word => word);
+        // Carregamento dinâmico de palavras
+        fetch(wordListUrl)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`Erro ao carregar palavras de ${wordListUrl}`);
+                }
+                return response.text();
+            })
+            .then(data => {
+                words = data.split('\n').map(word => word.trim()).filter(word => word);
 
-        // Inicializa todas as palavras com 0 tentativas
-        words.forEach((word, index) => {
-            attemptsPerWord[index] = 0;
-        });
+                // Inicializa o registro de tentativas
+                words.forEach((_, index) => {
+                    attemptsPerWord[index] = 0;
+                });
 
-        console.log("Palavras carregadas e tentativas inicializadas:", attemptsPerWord); // Log aqui
+                console.log("Palavras carregadas:", words);
 
-        loadWord(currentWordIndex); // Carrega a primeira palavra
-    })
-    .catch(error => console.error('Error fetching words:', error));
+                // Carrega a primeira palavra
+                loadWord(currentWordIndex);
+            })
+            .catch(error => {
+                console.error("Erro ao carregar dados:", error);
+                alert("Erro ao carregar os dados. Verifique o console para mais detalhes.");
+            });
 
-           
+        // Função para carregar uma palavra e sua imagem correspondente
         function loadWord(index) {
             if (index < 0) {
                 currentWordIndex = 0;
@@ -261,12 +283,12 @@ fetch(wordListUrl)
                 const currentImage = `imagem${currentWordIndex + 1}.png`;
 
                 document.getElementById("word").textContent = currentWord;
-                document.getElementById("image").src = imageFolderUrl + currentImage;
+                document.getElementById("image").src = `${imageFolderUrl}${currentImage}`;
                 resetFeedback();
-                tryAgainInProgress = false;
                 enableStartButton();
             }
         }
+    }
 
         const startButton = document.getElementById("startButton");
         const prevButton = document.getElementById("prevButton");
@@ -375,6 +397,15 @@ fetch(wordListUrl)
             });
         }
 
+function getParamsFromURL() {
+    const params = new URLSearchParams(window.location.search);
+    return {
+        level: params.get('level'),
+        unit: params.get('unit'),
+        fase: params.get('fase'),
+    };
+}
+
 function enableNextWord() {
     resultDiv.textContent = "Moving to the next word...";
     resultDiv.style.color = "orange";
@@ -391,31 +422,31 @@ function enableNextWord() {
             resultDiv.textContent = "";
         }
 
-    function checkCompletion() {
-    console.log("Verificando conclusão. Tentativas atuais:", attemptsPerWord); // Log aqui
+   function checkCompletion() {
+    console.log("Verificando conclusão. Tentativas atuais:", attemptsPerWord);
 
     const allWordsCompleted = Object.values(attemptsPerWord).every(
         (attempts) => attempts >= 3 // Palavra foi acertada ou tentada 3 vezes
     );
 
     if (allWordsCompleted) {
-        console.log("Todas as palavras foram completadas ou tentadas 3 vezes."); // Log aqui
+        console.log("Todas as palavras foram completadas ou tentadas 3 vezes.");
 
         // Exibe o modal de conclusão
         markActivityAsCompleted();
 
         // Aguarda a autenticação do usuário e atualiza o progresso
         ensureUserIsAuthenticated((userId) => {
-            console.log("Usuário autenticado. Atualizando progresso no banco de dados."); // Log aqui
+            console.log("Usuário autenticado. Atualizando progresso no banco de dados.");
             updateNextPhase(userId); // Atualiza o progresso no banco de dados
         });
     } else {
-        console.log("Ainda há palavras incompletas."); // Log aqui
+        console.log("Ainda há palavras incompletas.");
     }
 }
 
-        function markActivityAsCompleted() {
-    console.log("Exibindo modal de conclusão."); // Log aqui
+     function markActivityAsCompleted() {
+    console.log("Exibindo modal de conclusão.");
     document.getElementById('overlay').style.display = 'block';
     document.getElementById('completion-modal').style.display = 'block';
 }
@@ -436,29 +467,29 @@ function enableNextWord() {
     });
 }
 
-     function updateNextPhase(userId) {
+    function updateNextPhase(userId) {
     const currentPhase = getPhaseFromURL();
-    const { level, unit } = getLevelAndUnitFromURL();
+    const { level, unit } = getParamsFromURL();
     const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
-    console.log("Atualizando próximo progresso no banco de dados:", { userId, currentPhase, level, unit }); // Log aqui
+    console.log("Atualizando próximo progresso no banco de dados:", { userId, currentPhase, level, unit });
 
     try {
         if (currentPhase === "last") {
             const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-            console.log("Última fase da unidade. Criando próxima unidade:", nextUnit); // Log aqui
+            console.log("Última fase da unidade. Criando próxima unidade:", nextUnit);
             dbRef.child(nextUnit).set({ fase1: true });
         } else if (currentPhase === "end") {
             const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-            console.log("Última unidade do nível. Criando próximo nível:", nextLevel); // Log aqui
+            console.log("Última unidade do nível. Criando próximo nível:", nextLevel);
             firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
         } else {
             const nextPhase = parseInt(currentPhase) + 1;
-            console.log("Avançando para a próxima fase:", nextPhase); // Log aqui
+            console.log("Avançando para a próxima fase:", nextPhase);
             dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
         }
     } catch (error) {
-        console.error("Erro ao atualizar o progresso da fase:", error); // Log aqui
+        console.error("Erro ao atualizar o progresso da fase:", error);
     }
 }
 
