--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -250,7 +250,7 @@ fetch(wordListUrl)
     .catch(error => console.error('Error fetching words:', error));
 
            
-      function loadWord(index) {
+     function loadWord(index) {
     const urlParams = getLevelAndUnitFromURL();
     if (!urlParams) {
         alert("Erro: Não foi possível carregar o conteúdo. Verifique a URL.");
@@ -278,7 +278,7 @@ fetch(wordListUrl)
         // Tratamento de erros no carregamento da imagem
         imageElement.onerror = () => {
             console.error(`Erro ao carregar a imagem: ${currentImage}`);
-            imageElement.src = '../../../imagens/fallback.png'; // Caminho para uma imagem padrão
+            imageElement.src = '/mnt/data/image.png'; // Caminho para a imagem enviada
         };
 
         resetFeedback();
