--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -250,7 +250,7 @@ fetch(wordListUrl)
     .catch(error => console.error('Error fetching words:', error));
 
            
-     function loadWord(index) {
+    function loadWord(index) {
     const urlParams = getLevelAndUnitFromURL();
     if (!urlParams) {
         alert("Erro: Não foi possível carregar o conteúdo. Verifique a URL.");
@@ -308,7 +308,10 @@ function loadWords() {
             console.log("Palavras carregadas com sucesso:", words);
             loadWord(currentWordIndex); // Carrega a primeira palavra
         })
-        .catch(error => console.error('Erro ao carregar as palavras:', error));
+        .catch(error => {
+            console.error('Erro ao carregar as palavras:', error);
+            alert("Erro ao carregar a lista de palavras.");
+        });
 }
 
 // Carregamento de Palavras
