--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -223,7 +223,6 @@
 
         firebase.initializeApp(firebaseConfig);
 
-        const wordListUrl = '../data2/words.txt';
         const imageFolderUrl = '../data2/imagens/';
         let words = [];
         let currentWordIndex = 0;
@@ -315,7 +314,7 @@ function loadWords() {
 }
 
 // Carregamento de Palavras
-const wordListUrl = '../data2/words.txt'; // O caminho continua estático para o exemplo
+// O caminho continua estático para o exemplo
 fetch(wordListUrl)
     .then(response => response.text())
     .then(data => {
