--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -223,78 +223,81 @@
     }
 
     async function loadWords() {
-        const { level, unit } = getLevelAndUnitFromURL();
-        const filePath = `../../${level}/${unit}/data1/Words.txt`;
-        try {
-            const response = await fetch(filePath);
-            if (!response.ok) throw new Error(`Erro ao carregar o arquivo: ${filePath}`);
-            const text = await response.text();
-            return text.split('\n').filter(word => word.trim() !== '').map(word => word.trim());
-        } catch (error) {
-            console.error("Erro ao carregar o arquivo Words.txt:", error);
-            return [];
-        }
+    const { level, unit } = getLevelAndUnitFromURL();
+    const filePath = `../../${level}/${unit}/data1/Words.txt`;
+    console.log("Tentando carregar o arquivo:", filePath); // LOG PARA DEBUG
+    try {
+        const response = await fetch(filePath);
+        if (!response.ok) throw new Error(`Erro ao carregar o arquivo: ${filePath}`);
+        const text = await response.text();
+        return text.split('\n').filter(word => word.trim() !== '').map(word => word.trim());
+    } catch (error) {
+        console.error("Erro ao carregar o arquivo Words.txt:", error);
+        return [];
     }
+}
 
     async function generateFlashcards() {
-        const { level, unit } = getLevelAndUnitFromURL();
-        const words = await loadWords();
-        totalCards = words.length;
-        interactedCards = new Array(totalCards).fill(false);
-        const container = document.getElementById('flashcards-container');
+    const { level, unit } = getLevelAndUnitFromURL();
+    const words = await loadWords();
+    console.log("Palavras carregadas:", words); // LOG PARA DEBUG
+    totalCards = words.length;
+    interactedCards = new Array(totalCards).fill(false);
+    const container = document.getElementById('flashcards-container');
 
-        if (words.length === 0) {
-            container.innerHTML = "Não foi possível carregar os flash cards.";
-            return;
-        }
-
-        words.forEach((word, index) => {
-            const card = document.createElement('div');
-            card.classList.add('card');
-
-            const cardInner = document.createElement('div');
-            cardInner.classList.add('card-inner');
-
-            const cardFront = document.createElement('div');
-            cardFront.classList.add('card-front');
-            const img = document.createElement('img');
-            img.src = `../../${level}/${unit}/data1/imagens/Imagem${index + 1}.png`;
-            img.onerror = function () {
-                console.error(`Erro ao carregar a imagem: Imagem${index + 1}.png`);
-            };
-            cardFront.appendChild(img);
-
-            const cardBack = document.createElement('div');
-            cardBack.classList.add('card-back');
-            cardBack.textContent = word;
-
-            card.addEventListener('click', function () {
-                card.classList.toggle('rotated');
-                interactedCards[index] = true;
-                checkCompletion();
-            });
-
-            const playSoundIcon = document.createElement('img');
-            playSoundIcon.classList.add('play-sound');
-            playSoundIcon.src = 'businessman.png';
-            playSoundIcon.alt = "Play Sound";
-            playSoundIcon.onclick = (event) => {
-                event.stopPropagation();
-                playSound(word);
-                if (!playSoundIcon.classList.contains('played')) {
-                    playSoundIcon.classList.add('played');
-                    soundPlayed++;
-                    checkCompletion();
-                }
-            };
-
-            cardInner.appendChild(cardFront);
-            cardInner.appendChild(cardBack);
-            card.appendChild(cardInner);
-            card.appendChild(playSoundIcon);
-            container.appendChild(card);
-        });
+    if (words.length === 0) {
+        container.innerHTML = "Não foi possível carregar os flash cards.";
+        return;
     }
+
+    words.forEach((word, index) => {
+        const card = document.createElement('div');
+        card.classList.add('card');
+
+        const cardInner = document.createElement('div');
+        cardInner.classList.add('card-inner');
+
+        const cardFront = document.createElement('div');
+        cardFront.classList.add('card-front');
+        const img = document.createElement('img');
+        img.src = `../../${level}/${unit}/data1/imagens/Imagem${index + 1}.png`;
+        console.log("Tentando carregar a imagem:", img.src); // LOG PARA DEBUG
+        img.onerror = function () {
+            console.error(`Erro ao carregar a imagem: Imagem${index + 1}.png`);
+        };
+        cardFront.appendChild(img);
+
+        const cardBack = document.createElement('div');
+        cardBack.classList.add('card-back');
+        cardBack.textContent = word;
+
+        card.addEventListener('click', function () {
+            card.classList.toggle('rotated');
+            interactedCards[index] = true;
+            checkCompletion();
+        });
+
+        const playSoundIcon = document.createElement('img');
+        playSoundIcon.classList.add('play-sound');
+        playSoundIcon.src = 'businessman.png';
+        playSoundIcon.alt = "Play Sound";
+        playSoundIcon.onclick = (event) => {
+            event.stopPropagation();
+            playSound(word);
+            if (!playSoundIcon.classList.contains('played')) {
+                playSoundIcon.classList.add('played');
+                soundPlayed++;
+                checkCompletion();
+            }
+        };
+
+        cardInner.appendChild(cardFront);
+        cardInner.appendChild(cardBack);
+        card.appendChild(cardInner);
+        card.appendChild(playSoundIcon);
+        container.appendChild(card);
+    });
+}
 
     function playSound(word) {
         const utterance = new SpeechSynthesisUtterance(word);
