--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -260,10 +260,10 @@
         const cardFront = document.createElement('div');
         cardFront.classList.add('card-front');
         const img = document.createElement('img');
-        img.src = `../../${level}/${unit}/data1/imagens/Imagem${index + 1}.png`;
+        img.src = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
         console.log("Tentando carregar a imagem:", img.src); // LOG PARA DEBUG
         img.onerror = function () {
-            console.error(`Erro ao carregar a imagem: Imagem${index + 1}.png`);
+            console.error(`Erro ao carregar a imagem: imagem${index + 1}.png`);
         };
         cardFront.appendChild(img);
 
