--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -244,7 +244,7 @@ if (!params) {
 }
 
 document.addEventListener('DOMContentLoaded', () => {
-    setupBackButton(); // Configura a lógica do botão Back
+    setupBackButton();
 });
 
        // Caminhos dinâmicos baseados nos parâmetros da URL
@@ -539,7 +539,7 @@ function enableStartButton() {
 }
 
 function setupBackButton() {
-    const backButton = document.querySelector('#backButton'); // Seleciona o botão pelo id
+    const backButton = document.getElementById("backButton"); // Seleciona o botão pelo id
 
     backButton.addEventListener('click', async (event) => {
         event.preventDefault(); // Impede a navegação imediata
