--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -240,7 +240,7 @@ function getParamsFromURL() {
 // Obtém os parâmetros da URL
 const params = getParamsFromURL();
 if (!params) {
-    throw new Error('URL parameters missing');
+    throw new Error('URL parameters missing or invalid. Stopping execution.');
 }
 
 document.addEventListener('DOMContentLoaded', () => {
@@ -543,9 +543,11 @@ function setupBackButton() {
 
     backButton.addEventListener('click', async (event) => {
         event.preventDefault(); // Impede a navegação imediata
-        const { level, unit } = getLevelAndUnitFromURL();
-        const currentPhase = parseInt(getPhaseFromURL()); // Converte a fase atual para número
-        const nextPhase = `fase${currentPhase + 1}`; // Calcula a próxima fase
+        const params = getParamsFromURL();
+        if (!params) return; // Interrompe se os parâmetros estiverem ausentes
+
+        const { level, unit, fase } = params;
+        const nextPhase = `fase${parseInt(fase) + 1}`; // Calcula a próxima fase
 
         try {
             const user = await getAuthenticatedUser();
