--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -188,6 +188,7 @@
         <img src="microfone.png" alt="Start Speaking">
     </button>
     <div class="result" id="result"></div>
+    <img id="correctGif" src="certo.gif" alt="Correct animation" style="display: none; width: 100px; height: auto;">
     <div class="navigation">
         <button id="prevButton" class="button nav-button">Previous</button>
         <button id="nextButton" class="button nav-button">Next</button>
@@ -378,10 +379,24 @@ recognition.onend = () => {
     }, 5000);
 }
 
-        function handleCorrectAnswer() {
+       function handleCorrectAnswer() {
+    const resultDiv = document.getElementById("result");
+    const correctGif = document.getElementById("correctGif");
+
+    // Atualiza o texto de resultado
     resultDiv.textContent = "Correct!";
     resultDiv.style.color = "green";
+
+    // Exibe o GIF
+    correctGif.style.display = "block";
+
+    // Toca o áudio
+    const audio = new Audio("certo.mp3");
+    audio.play();
+
+    // Oculta o GIF e avança para a próxima palavra após 3 segundos
     setTimeout(() => {
+        correctGif.style.display = "none";
         if (currentWordIndex + 1 < words.length) {
             loadWord(currentWordIndex + 1);
         } else {
