--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -184,11 +184,11 @@
     </div>
     <img id="icon" class="icon" src="businessman.png" alt="Icon">
     <div class="word" id="word"></div>
+    <img id="correctGif" src="certo.gif" alt="Correct animation" style="display: none; width: 150px; height: auto; margin: 10px auto;">
     <button id="startButton">
         <img src="microfone.png" alt="Start Speaking">
     </button>
-    <div class="result" id="result"></div>
-    <img id="correctGif" src="certo.gif" alt="Correct animation" style="display: none; width: 100px; height: auto;">
+    <div class="result" id="result"></div>   
     <div class="navigation">
         <button id="prevButton" class="button nav-button">Previous</button>
         <button id="nextButton" class="button nav-button">Next</button>
@@ -379,7 +379,7 @@ recognition.onend = () => {
     }, 5000);
 }
 
-       function handleCorrectAnswer() {
+      function handleCorrectAnswer() {
     const resultDiv = document.getElementById("result");
     const correctGif = document.getElementById("correctGif");
 
