--- a/Atividades/Speak2/index.html
+++ b/Atividades/Speak2/index.html
@@ -33,9 +33,10 @@
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
-     .icon {
-    display: block; /* Garante que o botão esteja separado da imagem */
-    margin: 20px auto; /* Centraliza o botão horizontalmente */
+   .icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -179,10 +180,10 @@
 <body>
     <button id="backButton" class="button">Back</button>
     <h1>Word Reading Practice</h1>
-    <div class="container">
-        <img id="image" class="image" src="" alt="Image">       
-    </div>
+   <div class="container">
+    <img id="image" class="image" src="" alt="Image">       
     <img id="icon" class="icon" src="businessman.png" alt="Icon">
+</div>
     <div class="word" id="word"></div>
     <img id="correctGif" src="certo.gif" alt="Correct animation" style="display: none; width: 150px; height: auto; margin: 10px auto;">
     <button id="startButton">
@@ -309,6 +310,12 @@ const imageElement = document.getElementById("image");
 const iconElement = document.getElementById("icon");
 const finalFeedbackDiv = document.getElementById("finalFeedback");
 const restartButton = document.getElementById("restartButton");
+
+// Adiciona evento ao botão "businessman"
+iconElement.addEventListener('click', () => {
+    const word = words[currentWordIndex]; // Obtém a palavra atual
+    readTextInUS(word); // Lê a palavra em inglês americano
+});
 
 const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
 recognition.lang = 'en-US';
